--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,9 +36,9 @@ if(ISCORE_SANITIZE)
     set(OSSIA_SANITIZE True)
 endif()
 if(ISCORE_STATIC_PLUGINS)
-    set(OSSIA_STATIC True)
+    set(OSSIA_STATIC ON)
 endif()
-set(OSSIA_NO_INSTALL True)
+set(OSSIA_NO_INSTALL ON)
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/API" )
 
 find_package(Qt5 5.3 REQUIRED COMPONENTS Core Widgets Gui Network Xml Svg Test Qml WebSockets)
