--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,8 @@ cmake_policy(SET CMP0063 NEW)
 set(ISCORE_VERSION_MAJOR 1)
 set(ISCORE_VERSION_MINOR 0)
 set(ISCORE_VERSION_PATCH 0)
-set(ISCORE_VERSION_EXTRA a71)
-set(ISCORE_CODENAME "On nie la notion de temps")
+set(ISCORE_VERSION_EXTRA a72)
+set(ISCORE_CODENAME "Shiny Master Chipsotato")
 set(ISCORE_VERSION "${ISCORE_VERSION_MAJOR}.${ISCORE_VERSION_MINOR}.${ISCORE_VERSION_PATCH}-${ISCORE_VERSION_EXTRA}")
 
 enable_testing()
