--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ set(CMAKE_MODULE_PATH
   "${CMAKE_CURRENT_SOURCE_DIR}/CMake/modules"
   "${CMAKE_CURRENT_SOURCE_DIR}/CMake/Configurations"
   "${CMAKE_CURRENT_SOURCE_DIR}/CMake/Configurations/travis"
-  "${CMAKE_CURRENT_SOURCE_DIR}/CMake/modules/cmake-modules")
+  "${CMAKE_CURRENT_SOURCE_DIR}/CMake/modules/cmake-modules"
+  "${CMAKE_CURRENT_SOURCE_DIR}/API/CMake/cmake-modules"
+  )
 set(CMAKE_PREFIX_PATH
   "${CMAKE_PREFIX_PATH}"
   "${CMAKE_MODULE_PATH}")
