--- a/base/plugins/iscore-plugin-midi/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-midi/CMakeLists.txt
@@ -13,6 +13,7 @@ set(HEADER_FILES
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Commands/RemoveNotes.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Commands/MoveNotes.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Commands/ScaleNotes.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Commands/SetOutput.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Commands/CommandFactory.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Inspector/MidiProcessInspector.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiProcessMetadata.hpp"
@@ -32,6 +33,7 @@ set(SOURCE_FILES
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Commands/RemoveNotes.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Commands/MoveNotes.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Commands/ScaleNotes.cpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Commands/SetOutput.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Commands/CommandFactory.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Inspector/MidiProcessInspector.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiProcess.cpp"
