--- a/base/plugins/iscore-plugin-midi/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-midi/CMakeLists.txt
@@ -16,6 +16,7 @@ set(HEADER_FILES
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Commands/SetOutput.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Commands/CommandFactory.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Inspector/MidiProcessInspector.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Panel/MidiPanel.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiProcessMetadata.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiProcess.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiFactory.hpp"
@@ -36,6 +37,7 @@ set(SOURCE_FILES
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Commands/SetOutput.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Commands/CommandFactory.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Inspector/MidiProcessInspector.cpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Midi/Panel/MidiPanel.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiProcess.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiPresenter.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiView.cpp"
