--- a/base/lib/CMakeLists.txt
+++ b/base/lib/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/iscore/command/CommandGeneratorMap.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/iscore/command/PropertyCommand.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/iscore/command/SerializableCommand.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/iscore/command/Validity/ValidityChecker.cpp"
 
 "${CMAKE_CURRENT_SOURCE_DIR}/iscore/component/Component.cpp"
 
