try to disable app nap for i-score

--- a/base/app/Info.plist.in
+++ b/base/app/Info.plist.in
@@ -34,6 +34,8 @@
 	<string>NSApplication</string>
 	<key>NSHighResolutionCapable</key>
     <true/>
+    <key>NSAppSleepDisabled</key>
+    <true/>
 	<key>NSHumanReadableCopyright</key>
 	<string>${MACOSX_BUNDLE_COPYRIGHT}</string>
 
