--- a/base/lib/CMakeLists.txt
+++ b/base/lib/CMakeLists.txt
@@ -79,6 +79,7 @@ set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/iscore/tools/IdentifiedObjectAbstract.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/iscore/tools/NamedObject.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/iscore/tools/ObjectPath.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/iscore/tools/RelativePath.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/iscore/tools/RandomNameProvider.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/iscore/model/ModelMetadata.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/iscore/model/Skin.cpp"
