--- a/base/plugins/iscore-lib-state/Tests/CMakeLists.txt
+++ b/base/plugins/iscore-lib-state/Tests/CMakeLists.txt
@@ -20,3 +20,5 @@ addStateTest(EqualityTest
              "${CMAKE_CURRENT_SOURCE_DIR}/EqualityTest.cpp")
 addStateTest(ExpressionTest
              "${CMAKE_CURRENT_SOURCE_DIR}/ExpressionParsingTests.cpp")
+addStateTest(UnitTest
+             "${CMAKE_CURRENT_SOURCE_DIR}/UnitTests.cpp")
