remake integration tests work

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,8 @@ matrix:
     - os: osx
 
   include:
-#    - os: linux
-#      env: CONF=linux-gcov CAN_DEPLOY=False
+    - os: linux
+      env: CONF=linux-gcov CAN_DEPLOY=False
 
     - os: osx
       env: CONF=osx-release CAN_DEPLOY=True
