various build fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,10 +51,8 @@ set(OSSIA_3RDPARTY_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/API/3rdparty")
 set(ISCORE_ROOT_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 set(ISCORE_ROOT_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}")
 include_directories("${ISCORE_ROOT_BINARY_DIR}")
-include_directories(SYSTEM "${3RDPARTY_FOLDER}/variant/include")
-include_directories(SYSTEM "${3RDPARTY_FOLDER}/nano-signal-slot")
-include_directories(SYSTEM "${3RDPARTY_FOLDER}/verdigris/src")
-include_directories(SYSTEM "${3RDPARTY_FOLDER}/verdigris/src")
+include_directories(SYSTEM "${OSSIA_3RDPARTY_FOLDER}/variant/include")
+include_directories(SYSTEM "${OSSIA_3RDPARTY_FOLDER}/nano-signal-slot")
 include_directories(SYSTEM "${OSSIA_3RDPARTY_FOLDER}/brigand")
 add_subdirectory("${3RDPARTY_FOLDER}/Qt-Color-Widgets" )
 add_subdirectory("${3RDPARTY_FOLDER}/QProgressIndicator" )
