--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ image: Visual Studio 2015
 platform: x86
 
 install:
-  - appveyor DownloadFile "https://unsis.googlecode.com/files/nsis-2.46.5-Unicode-setup.exe" -FileName nsis.exe
+  - appveyor DownloadFile "https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/unsis/nsis-2.46.5-Unicode-setup.exe" -FileName nsis.exe
   - nsis.exe /S
 
 build_script:
