--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ add_subdirectory("${3RDPARTY_FOLDER}/zlib" EXCLUDE_FROM_ALL)
 add_subdirectory("${3RDPARTY_FOLDER}/quazip" EXCLUDE_FROM_ALL)
 
 set(ISCORE_ZEROCONF False)
-find_package(KF5DNSSD NO_MODULE)
+find_package(KF5DNSSD QUIET NO_MODULE)
 if(KF5DNSSD_FOUND)
     find_package(Qt5 5.3 COMPONENTS DBus)
     if(Qt5DBus_FOUND)
