--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "3rdparty/zlib"]
 	path = 3rdparty/zlib
 	url = https://github.com/madler/zlib
+[submodule "Documentation/Doxygen/doxygen-bootstrapped"]
+	path = Documentation/Doxygen/doxygen-bootstrapped
+	url = https://github.com/Velron/doxygen-bootstrapped
