Remote UI builder

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -24,6 +24,10 @@ else()
   add_subdirectory(app)
 endif()
 
+set(ISCORE_REMOTE 1)
+if(ISCORE_REMOTE)
+  add_subdirectory(remote)
+endif()
 if(ISCORE_COVERAGE)
     add_subdirectory(app-test)
 endif()
