workaround travis bugs

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
 language: cpp
-os:
-  - osx
-  - linux
 
 cache:
   directories:
@@ -34,11 +31,15 @@ matrix:
   include:
     - os: linux
       env: CONF=linux-gcov CAN_DEPLOY=False
+      dist: trusty
 
     - os: osx
       env: CONF=osx-release CAN_DEPLOY=True
     - os: linux
       env: CONF=linux-package-appimage CAN_DEPLOY=True
+      dist: trusty
+      services:
+        - docker
 
     - os: osx
       env: CONF=osx-debug CAN_DEPLOY=False
@@ -49,10 +50,13 @@ matrix:
 
     - os: linux
       env: CONF=linux-debug CAN_DEPLOY=False
+      dist: trusty
     - os: linux
       env: CONF=linux-static-debug CAN_DEPLOY=False
+      dist: trusty
     - os: linux
       env: CONF=linux-release CAN_DEPLOY=False
+      dist: trusty
 
 # Coverity
 #    - os: linux
