--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ endif()
 set(OSSIA_NO_INSTALL ON CACHE INTERNAL "" FORCE)
 set(OSSIA_PD OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_OSX_FAT_LIBRARIES OFF CACHE INTERNAL "" FORCE)
+set(OSSIA_PYTHON ON CACHE INTERNAL "" FORCE)
 
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/API" )
 
