--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ if(ISCORE_ENABLE_LTO)
     set(OSSIA_LTO ON CACHE INTERNAL "" FORCE)
 endif()
 set(OSSIA_NO_INSTALL ON CACHE INTERNAL "" FORCE)
-set(OSSIA_PD ON CACHE INTERNAL "" FORCE)
+set(OSSIA_PD OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_OSX_FAT_LIBRARIES OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_PYTHON ON CACHE INTERNAL "" FORCE)
 
