--- a/base/plugins/iscore-plugin-engine/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-engine/CMakeLists.txt
@@ -15,6 +15,10 @@ set(HDRS
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/Minuit/MinuitDevice.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/Minuit/MinuitSpecificSettings.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/Minuit/MinuitProtocolFactory.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/OSCQuery/OSCQueryProtocolSettingsWidget.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/OSCQuery/OSCQueryDevice.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/OSCQuery/OSCQuerySpecificSettings.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/OSCQuery/OSCQueryProtocolFactory.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/Local/LocalProtocolSettingsWidget.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/Local/LocalDevice.hpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/Local/LocalSpecificSettings.hpp"
@@ -86,6 +90,10 @@ set(SRCS
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/Minuit/MinuitProtocolSettingsWidget.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/Minuit/MinuitDevice.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/Minuit/MinuitProtocolFactory.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/OSCQuery/OSCQuerySpecificSettingsSerialization.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/OSCQuery/OSCQueryProtocolSettingsWidget.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/OSCQuery/OSCQueryDevice.cpp"
+"${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/OSCQuery/OSCQueryProtocolFactory.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/Local/LocalSpecificSettingsSerialization.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/Local/LocalProtocolSettingsWidget.cpp"
 "${CMAKE_CURRENT_SOURCE_DIR}/Engine/Protocols/Local/LocalDevice.cpp"
