--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,8 +47,9 @@ if(ISCORE_ENABLE_LTO)
 endif()
 set(OSSIA_NO_INSTALL ON CACHE INTERNAL "" FORCE)
 set(OSSIA_PD OFF CACHE INTERNAL "" FORCE)
+set(OSSIA_JAVA OFF CACHE INTERNAL "" FORCE)
 set(OSSIA_OSX_FAT_LIBRARIES OFF CACHE INTERNAL "" FORCE)
-set(OSSIA_PYTHON ON CACHE INTERNAL "" FORCE)
+set(OSSIA_PYTHON OFF CACHE INTERNAL "" FORCE)
 
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/API" )
 
