--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,8 @@ cmake_policy(SET CMP0063 NEW)
 set(ISCORE_VERSION_MAJOR 1)
 set(ISCORE_VERSION_MINOR 0)
 set(ISCORE_VERSION_PATCH 0)
-set(ISCORE_VERSION_EXTRA b3)
-set(ISCORE_CODENAME "Otan en amporte le vant")
+set(ISCORE_VERSION_EXTRA b4)
+set(ISCORE_CODENAME "Ourdissement d'une officine")
 set(ISCORE_VERSION "${ISCORE_VERSION_MAJOR}.${ISCORE_VERSION_MINOR}.${ISCORE_VERSION_PATCH}-${ISCORE_VERSION_EXTRA}")
 
 enable_testing()
