--- a/base/plugins/iscore-plugin-deviceexplorer/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-deviceexplorer/CMakeLists.txt
@@ -130,14 +130,12 @@ target_link_libraries(iscore_plugin_deviceexplorer
         PRIVATE
                 QProgressIndicator)
 
-if(ISCORE_ZEROCONF)
-    target_sources(${PROJECT_NAME} PRIVATE
-        "${CMAKE_CURRENT_SOURCE_DIR}/Explorer/Widgets/ZeroConf/ZeroconfBrowser.hpp"
-        "${CMAKE_CURRENT_SOURCE_DIR}/Explorer/Widgets/ZeroConf/ZeroconfBrowser.cpp")
+target_sources(${PROJECT_NAME} PRIVATE
+    "${CMAKE_CURRENT_SOURCE_DIR}/Explorer/Widgets/ZeroConf/ZeroconfBrowser.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Explorer/Widgets/ZeroConf/ZeroconfBrowser.cpp")
 
-    target_compile_definitions(${PROJECT_NAME} PUBLIC ISCORE_ZEROCONF)
-    target_link_libraries(${PROJECT_NAME} PRIVATE KF5::DNSSD)
-endif()
+target_compile_definitions(${PROJECT_NAME} PUBLIC ISCORE_ZEROCONF)
+target_link_libraries(${PROJECT_NAME} PRIVATE Servus ServusQt)
 
 setup_iscore_plugin(iscore_plugin_deviceexplorer)
 setup_iscore_tests(Tests)
