--- a/tools/sdk/Linux/Dockerfile
+++ b/tools/sdk/Linux/Dockerfile
@@ -1,7 +1,7 @@
 FROM centos:6
 
 RUN yum -y update 
-RUN yum -y install epel-release gcc gcc-c++ wget flex bison
+RUN yum -y install epel-release gcc gcc-c++ wget flex bison rsync
 
 ADD gcc-deps.sh /image/gcc-deps.sh
 RUN /image/gcc-deps.sh
