--- a/base/plugins/iscore-plugin-midi/CMakeLists.txt
+++ b/base/plugins/iscore-plugin-midi/CMakeLists.txt
@@ -25,6 +25,7 @@ set(HEADER_FILES
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiView.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiNoteView.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiExecutor.hpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiStyle.hpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/iscore_plugin_midi.hpp"
   )
 
@@ -42,6 +43,7 @@ set(SOURCE_FILES
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiNoteView.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiNote.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiExecutor.cpp"
+  "${CMAKE_CURRENT_SOURCE_DIR}/Midi/MidiStyle.cpp"
   "${CMAKE_CURRENT_SOURCE_DIR}/iscore_plugin_midi.cpp"
   )
 
