temporal constraint works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,11 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/CMake/IScoreConfiguration.cmake")
 if(ISCORE_SANITIZE)
     set(OSSIA_SANITIZE True CACHE INTERNAL "" FORCE)
 endif()
+if(ISCORE_SPLIT_DEBUG)
+  set(OSSIA_SPLIT_DEBUG True CACHE INTERNAL "" FORCE)
+else()
+  set(OSSIA_SPLIT_DEBUG False CACHE INTERNAL "" FORCE)
+endif()
 if(ISCORE_STATIC_PLUGINS)
     set(OSSIA_STATIC ON CACHE INTERNAL "" FORCE)
 endif()
