Fix osx build in part

--- a/base/player/CMakeLists.txt
+++ b/base/player/CMakeLists.txt
@@ -4,29 +4,11 @@ project(iscore_player LANGUAGES CXX)
 iscore_common_setup()
 enable_testing()
 
-# TODO strip symbols after deployment build
-
 find_package(Qt5 5.7 COMPONENTS QuickControls2)
-set(SRCS
-  "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
-)
-if(WIN32)
-set(SRCS ${SRCS} "${CMAKE_CURRENT_SOURCE_DIR}/../lib/resources/i-score.rc")
-endif()
 
-if(APPLE)
-  set(ICON_SRC "${CMAKE_CURRENT_SOURCE_DIR}/../lib/resources/i-score.icns")
-  set_source_files_properties(${ICON_SRC} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
-endif()
+add_executable(player "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
 
-if(DEPLOYMENT_BUILD)
-    add_executable(player WIN32 MACOSX_BUNDLE ${SRCS} ${ICON_SRC})
-else()
-    add_executable(player WIN32 ${SRCS})
-endif()
-
-
-target_link_libraries(player PUBLIC iscore_lib_base  iscore_plugin_scenario iscore_plugin_engine Qt5::QuickControls2)
+target_link_libraries(player PUBLIC iscore_lib_base iscore_plugin_scenario iscore_plugin_engine Qt5::QuickControls2)
 
 if(ISCORE_STATIC_PLUGINS)
   iscore_write_static_plugins_header()
@@ -34,10 +16,3 @@ if(ISCORE_STATIC_PLUGINS)
 endif()
 
 setup_iscore_common_exe_features(player)
-
-install(
-  TARGETS player
-  BUNDLE DESTINATION .
-  RUNTIME DESTINATION bin)
-
-include(IScoreDeployment)
