minor fixes for android build

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -17,7 +17,7 @@ if(ISCORE_MERGE_COMPONENTS)
 endif()
 
 if(ANDROID)
-    add_subdirectory(app-android)
+#    add_subdirectory(app-android)
 elseif(NACL)
     add_subdirectory(app-nacl)
 else()
