--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,7 @@ before_install:
 - "./tools/travis/deps.sh"
 
 script:
-- "./tools/travis/build.sh"
+- travis_wait 30 bash ./tools/travis/build.sh
 
 after_success:
 - "./tools/travis/deploy.sh"
